# TurboText

./: .gitignore  LICENSE  MANIFEST.in  README.md  pyproject.toml  setup.py
.github/workflows/: ci.yml  publish.yml  release.yml
benches/: bench_1m_words.py  bench_comparison.py  bench_m3.py  scaling_benchmark.py
reference/: reference_matcher.py
src/turbotext/: __init__.py  _fast.c  _fast.pyi  _fast.pyx  frontier.py  resolve.py  store.py  trie.py
tests/: test_m0_smoke.py  test_m1_exact.py  test_m2_metadata_priorities.py  test_m3_fuzzy.py
