[build-system]
requires = ["setuptools>=64", "Cython>=3.0"]
build-backend = "setuptools.build_meta"

[project]
name = "turbotext"
version = "0.2.0"
description = "Boundary-aware fuzzy keyword matching with pluggable conflict resolution"
readme = "README.md"
license = { file = "LICENSE" }
requires-python = ">=3.10"
dependencies = []
authors = [
    { name = "Nishank Mahore", email = "nishankmahore@gmail.com" },
]
maintainers = [
    { name = "Nishank Mahore", email = "nishankmahore@gmail.com" },
]
keywords = [
    "keyword extraction",
    "fuzzy matching",
    "nlp",
    "text processing",
    "trie",
    "levenshtein",
    "named entity",
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Cython",
    "Topic :: Text Processing :: Linguistic",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "Typing :: Typed",
]

[project.urls]
Homepage = "https://github.com/nishankmahore/TurboText"
Repository = "https://github.com/nishankmahore/TurboText"
"Bug Tracker" = "https://github.com/nishankmahore/TurboText/issues"


[dependency-groups]
dev = [
    "pytest>=8.0",
    "pytest-benchmark",
    "hypothesis",
    "ruff>=0.4",
    "mypy>=1.10",
    "flashtext>=2.7",
    "fuzzywuzzy>=0.18.0",
    "python-levenshtein>=0.27.3",
    "cython>=3.2.8",
    "setuptools>=82.0.1",
    "matplotlib>=3.10.9",
    "rapidfuzz>=3.14.5",
]

[tool.setuptools.packages.find]
where = ["src"]

[tool.ruff]
src = ["src"]
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "I", "UP"]

[tool.mypy]
strict = true
mypy_path = "src"
explicit_package_bases = true

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]

[tool.cibuildwheel]
# Build for CPython 3.10–3.13 only (no PyPy)
build = "cp310-* cp311-* cp312-* cp313-*"
# Cython must be present before setup.py runs
before-build = "pip install cython>=3.0"
# Smoke-test every wheel after it is built
test-requires = ["pytest", "hypothesis"]
test-command = "pytest {project}/tests -q --tb=short"

[tool.cibuildwheel.linux]
archs = ["x86_64", "aarch64"]

[tool.cibuildwheel.macos]
archs = ["x86_64", "arm64"]

[tool.cibuildwheel.windows]
archs = ["AMD64"]
